[gd_scene load_steps=9 format=3 uid="uid://cgg3p4y0yferl"]

[ext_resource type="Script" uid="uid://l6286vihg1au" path="res://components/wall_new_2.gd" id="1_xobvf"]
[ext_resource type="PackedScene" uid="uid://dqbsyjm472g3s" path="res://components/header.tscn" id="2_ukg4v"]
[ext_resource type="PackedScene" uid="uid://bx20db8xc8vfv" path="res://components/wall_widget.tscn" id="3_ukg4v"]
[ext_resource type="Theme" uid="uid://cc6pd6kgs8ds2" path="res://theme/main.tres" id="4_kjd36"]
[ext_resource type="Texture2D" uid="uid://c8k0on32gf6u5" path="res://icons/undo.png" id="5_ukg4v"]
[ext_resource type="PackedScene" uid="uid://dtcl56kq2beg1" path="res://components/nav_bar.tscn" id="6_40swn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ukg4v"]
bg_color = Color(1, 1, 1, 1)
border_width_top = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="ButtonGroup" id="ButtonGroup_kjd36"]

[node name="WallNew" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xobvf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Header2" parent="VBoxContainer" instance=ExtResource("2_ukg4v")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="WallWidget" parent="VBoxContainer/MarginContainer" instance=ExtResource("3_ukg4v")]
layout_mode = 2

[node name="ControlsWall" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Panel" type="Panel" parent="VBoxContainer/ControlsWall"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ukg4v")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ControlsWall/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ControlsWall/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ControlsWall/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="CheckBoxSmall" type="CheckBox" parent="VBoxContainer/ControlsWall/Panel/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("4_kjd36")
button_pressed = true
button_group = SubResource("ButtonGroup_kjd36")
text = "Small"

[node name="CheckMedium" type="CheckBox" parent="VBoxContainer/ControlsWall/Panel/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("4_kjd36")
button_group = SubResource("ButtonGroup_kjd36")
text = "Medium"

[node name="CheckBoxBig" type="CheckBox" parent="VBoxContainer/ControlsWall/Panel/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("4_kjd36")
button_group = SubResource("ButtonGroup_kjd36")
text = "Big"

[node name="ButtonUndo" type="Button" parent="VBoxContainer/ControlsWall/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_kjd36")
text = "Undo"
icon = ExtResource("5_ukg4v")

[node name="ButtonSave" type="Button" parent="VBoxContainer/ControlsWall/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_kjd36")
text = "ðŸ’¾ Save"

[node name="NavBar" parent="VBoxContainer" instance=ExtResource("6_40swn")]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/ControlsWall/Panel/MarginContainer/HBoxContainer/HBoxContainer/CheckBoxSmall" to="." method="_on_check_box_small_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlsWall/Panel/MarginContainer/HBoxContainer/HBoxContainer/CheckMedium" to="." method="_on_check_medium_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlsWall/Panel/MarginContainer/HBoxContainer/HBoxContainer/CheckBoxBig" to="." method="_on_check_box_big_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlsWall/Panel/MarginContainer/HBoxContainer/ButtonUndo" to="." method="_on_button_undo_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlsWall/Panel/MarginContainer/HBoxContainer/ButtonSave" to="." method="_on_button_save_pressed"]
